--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "rc": "~0.5.0",
+    "react": "^0.13.3",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
     "sails-hook-babel": "^5.0.1"
@@ -38,6 +39,12 @@
   "author": "keitamoromizato",
   "license": "",
   "devDependencies": {
+    "babelify": "^6.3.0",
     "jquery": "^2.1.4"
+  },
+  "browserify": {
+    "transform": [
+      ["babelify", { "stage": 0}]
+    ]
   }
 }
