--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "lodash": "^3.10.1",
     "rc": "~0.5.0",
     "react": "^0.13.3",
     "sails": "~0.11.0",
@@ -44,7 +45,12 @@
   },
   "browserify": {
     "transform": [
-      ["babelify", { "stage": 0 }]
+      [
+        "babelify",
+        {
+          "stage": 0
+        }
+      ]
     ]
   }
 }
