--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^0.13.3",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
-    "sails-hook-babel": "^5.0.1"
+    "sails-hook-babel": "^5.0.1",
+    "superagent": "^1.4.0"
   },
   "scripts": {
     "start": "node app.js",
