--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bluebird": "^2.10.2",
+    "debug": "^2.2.0",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-babel": "^5.0.1",
@@ -27,7 +29,8 @@
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
     "sails-hook-babel": "^5.0.1",
-    "superagent": "^1.4.0"
+    "superagent": "^1.4.0",
+    "superagent-bluebird-promise": "^2.1.0"
   },
   "scripts": {
     "start": "node app.js",
