--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "lodash": "^3.10.1",
+    "object-assign": "^4.0.1",
     "rc": "~0.5.0",
     "react": "^0.13.3",
     "sails": "~0.11.0",
